# repligit

./: pyproject.toml  spack.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  label.yml  openssf-scorecard.yml  publish.yml  security.yml  style.yml  unit-tests.yml
.github/workflows/requirements/: publish.txt  security.txt  style.txt  unit-tests.txt
examples/: git_mirror.py  git_mirror_async.py
spack/: spack.yaml
src/repligit/: client.py  exceptions.py  parse.py
src/repligit/asyncio/: client.py  parse.py
tests/: test_client.py
